[package]
name = "privacy-log"
version = "0.1.0"
edition = "2021"
authors = ["wcampbell"]
description = "rust-lang/log without file names and line "
license = "MIT/Apache-2.0"
readme = "README.md"
homepage = "https://github.com/wcampbell0x2a/privacy-log"
repository = "https://github.com/wcampbell0x2a/privacy-log"

[dependencies]
log = "0.4.22"

[dev-dependencies]
env_logger = "*"
